--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: mlops-app
-        image: 
+        image: keertthikumar517/gitops-project:latest
         ports:
         - containerPort: 5000
 
